argocd/manifests/swiparr/base/middleware-oauth2-errors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swiparr-oauth2-errors
  namespace: swiparr
spec:
  errors:
    status:
      - "401-403"
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/sign_in?rd={url}
    statusRewrites:
      "401": 302
