argocd/manifests/swiparr/base/middleware-oauth2-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swiparr-oauth2-forwardauth
  namespace: swiparr
spec:
  forwardAuth:
    address: http://oauth2-proxy.swiparr.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - Authorization
