argocd/manifests/swiparr/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swiparr
  labels:
    app.kubernetes.io/name: swiparr
    app.kubernetes.io/managed-by: argocd
