argocd/manifests/swiparr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swiparr
  namespace: swiparr
  labels:
    app: swiparr
    app.kubernetes.io/name: swiparr
spec:
  type: ClusterIP
  selector:
    app: swiparr
  ports:
    - name: http
      port: 4321
      targetPort: 4321
      protocol: TCP
